adjusted numBlock in scatter.js; fixed z-index and clip for Safari

--- a/main/css/style.css
+++ b/main/css/style.css
@@ -48,11 +48,12 @@ body{
 	height: 100%;
 	align-self: flex-end;
 	overflow: hidden;
-	z-index: 1;
+	position: relative;
+	z-index: 3;
 	/*border: 1px solid blue;*/
 }
 .menuItem{
-	z-index: 2;
+	z-index: 3;
 	height: 25%;
 	max-height: 250px;
 	position: relative;
@@ -133,7 +134,7 @@ filter: invert(100%);
 	cursor:pointer;
 }
 #midPanel{
-	z-index: 0;
+	z-index: 1;
 	position: absolute;;
 	/*border: 1px green solid;*/
 	overflow: hidden;
@@ -188,6 +189,7 @@ li {
 	display: flex;
 	flex-flow: row;
 	overflow: hidden;
+	-webkit-clip-path: polygon(0.66% 25%, 50% 0.66%, 99.33% 25%, 99.33% 75%, 50% 99.33%, 0.66% 75%);
 	clip-path: polygon(0.66% 25%, 50% 0.66%, 99.33% 25%, 99.33% 75%, 50% 99.33%, 0.66% 75%);
 	transform: scale(1.033);
 	transition: transform 0.33s ease-in-out;
@@ -207,6 +209,7 @@ div.hexBorder{
     background-color: black;
     display: flex;
     z-index: 1;
+    -webkit-clip-path: polygon(0% 25%, 50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 3% 25%, 3% 74%, 50% 94%, 97% 74%, 97% 26%, 50% 6%, 3% 26%, 0% 75%);
     clip-path: polygon(0% 25%, 50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 3% 25%, 3% 74%, 50% 94%, 97% 74%, 97% 26%, 50% 6%, 3% 26%, 0% 75%);
 }
 
@@ -331,6 +334,8 @@ li .midTabTxt .line{
 	transform: scale(1.033);
 	cursor:pointer;
 }
+#whoWeR{ overflow:hidden; }
+
 #whoWeR .bioPanel{
 	display: flex;
 	flex-direction: column;
@@ -352,6 +357,7 @@ li .midTabTxt .line{
 	flex-flow: row;
 	flex-shrink: 0;
 	overflow: hidden;
+	-webkit-clip-path: polygon(0.66% 25%, 50% 0.66%, 99.33% 25%, 99.33% 75%, 50% 99.33%, 0.66% 75%);
 	clip-path: polygon(0.66% 25%, 50% 0.66%, 99.33% 25%, 99.33% 75%, 50% 99.33%, 0.66% 75%);
 	transform: scale(1.033);
 	background-color: white;
@@ -367,9 +373,9 @@ li .midTabTxt .line{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    
+    height: 100%;    
 }
+
 #whoWeR .margin{
 	width: 15px;
 	flex-shrink: 0;
@@ -382,6 +388,8 @@ li .midTabTxt .line{
 	font-family: "DINProBold";
 }
 canvas{
+	-webkit-backface-visibility: hidden;
+	position: fixed !important;
 	z-index: -2 !important;
 }
 
